content/terraform-enterprise/1.1.x/docs/enterprise/deploy/manage/monitor/index.mdx
---
page_title: Monitor Terraform Enterprise deployments
description: Learn how to enable logs and metrics to monitor your Terraform Enterprise installation's performance.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-24T10:52:37-04:00
last_modified: 2025-10-24T10:52:37-04:00
# END AUTO GENERATED METADATA
---

# Monitor Terraform Enterprise

You can enable service logs, audit logs, and metrics in Terraform Enterprise to help you monitor your deployment. You can forward service logs to external monitoring applications. 

## Logs

Audit logs in Terraform Enterprise to help you monitor security-related events, such as when someone accesses the admin console or calls system API endpoints. You can access service logs, also called systems logs, to help you troubleshoot Terraform Enterprise issues. Refer to [Enable logs](/terraform/enterprise/deploy/manage/monitor/logs) for more information.

## Metrics 

Enable metrics collection to help you monitor Terraform Enterprise performance. Refer to [Enable metrics collection](/terraform/enterprise/deploy/manage/monitor/metrics) for more information.

## Replicated deployments

For information about monitoring Replicated deployments, refer to the following topics in the in the Replicated administration section:

- [Terraform Enterprise Log Forwarding](/terraform/enterprise/deploy/replicated/monitoring/logging) 
- [Monitoring a Terraform Enterprise Instance](/terraform/enterprise/deploy/replicated/monitoring/monitoring) 